--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@pinia/nuxt": "^0.9.0",
     "@popperjs/core": "^2.11.8",
     "@types/sass-loader": "^8.0.9",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
     "bootstrap": "^5.3.3",
+    "clipboard": "^2.0.11",
+    "moment": "^2.30.1",
     "nuxt": "^3.14.1592",
     "pinia": "^2.3.0",
     "pinia-plugin-persistedstate": "^4.2.0",
@@ -23,10 +27,12 @@
     "typescript": "^5.7.2",
     "vite": "^6.0.5",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "xlsx": "^0.18.5"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "devDependencies": {
-    "@types/bootstrap": "^5.2.10"
+    "@types/bootstrap": "^5.2.10",
+    "nuxt-particles": "^0.3.0"
   }
 }
