--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@pinia/nuxt": "^0.9.0",
     "@popperjs/core": "^2.11.8",
     "@types/sass-loader": "^8.0.9",
+    "@vueform/nuxt": "^1.8.0",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "bootstrap": "^5.3.3",
