--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@pinia/nuxt": "^0.9.0",
     "@popperjs/core": "^2.11.8",
     "@types/sass-loader": "^8.0.9",
+    "@vee-validate/nuxt": "^4.15.0",
     "@vueform/nuxt": "^1.8.0",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
@@ -30,7 +31,8 @@
     "vite": "^6.0.5",
     "vue": "latest",
     "vue-router": "latest",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "yup": "^1.6.1"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "devDependencies": {
